update project fix auth